--- a/vite-demo/src/components/QueryForm.css
+++ b/vite-demo/src/components/QueryForm.css
@@ -5,7 +5,7 @@
   padding: 50px;
 }
 
-#querycontainer {
+#querycontainer, #queryanalytics {
   display: flex;
   flex-direction: row;
 }
@@ -41,4 +41,12 @@
 
 #queryform button {
   margin-top: 20px; /* Add some space between the divs and the button */
+}
+
+#barchart, #querytable {
+  width: 500px;
+}
+
+#querytable {
+  overflow: auto;
 }
