--- a/vite-demo/src/components/QueryForm.css
+++ b/vite-demo/src/components/QueryForm.css
@@ -1,35 +1,42 @@
 #queryform {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  padding: 50px;
+  flex-direction: column;
+  padding: 100px;
 }
 
-#querycontainer, #queryanalytics {
+#queryanalytics {
   display: flex;
-  flex-direction: row;
+  gap: 30px;
 }
 
 #queryselector,
-#queryresponse {
-  flex-direction: column;
+#querylabels label {
+  width: 500px;
+}
+#querylabels,
+#queryboxes,
+#querybuttons {
+  flex-direction: row;
   display: flex;
-  align-items: center;
-  margin: 10px;
+  padding: 10px;
+  gap: 30px;
 }
 
+#querybuttons {
+  gap: 120px;
+  margin-bottom: 30px;
+}
 #queryselector select,
-#queryresponse label {
+#querylabels label {
   font-size: 18px;
   margin-bottom: 5px;
 }
 
-#queryselector pre,
-#queryresponse pre {
+#querylabels pre,
+#queryboxes pre {
   width: 500px;
-  min-height: 250px;
-  height: auto;
-  max-height: 400px;
+  height: 300px;
   background-color: rgb(25, 25, 25);
   border-radius: 3px;
   border: 1px solid pink;
@@ -43,10 +50,52 @@
   margin-top: 20px; /* Add some space between the divs and the button */
 }
 
-#barchart, #querytable {
-  width: 500px;
+#barchart,
+#querytable {
+  width: 800px;
+  height: 450px;
+  overflow: auto;
 }
 
 #querytable {
-  overflow: auto;
+  border-collapse: collapse;
+  width: 800px;
 }
+#querytable table {
+  width: 75%;
+  margin-right: 0;
+  margin-left: auto;
+}
+
+#querytable table,
+#barchart {
+  border: 1px solid pink;
+  border-radius: 2px;
+}
+
+#querytable th,
+#querytable td {
+  border: 1px solid transparent; /* Set transparent border to reserve space for borders */
+  padding: 8px; /* Adjust padding as needed */
+}
+
+#querytable th {
+  text-align: left;
+  background-color: #050505;
+}
+
+.querytable tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#querytable tr:hover {
+  background-color: #ddd;
+  color: black;
+}
+th {
+  padding: 8px;
+}
+
+/* #barchart {
+  margin-top: 2px;
+} */
