Cleaned up demo page and code

--- a/vite-demo/src/App.css
+++ b/vite-demo/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+body {
+  font-family: 'Nunito', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,7 +16,7 @@
 .logo {
   margin-top: auto;
   margin-bottom: auto;
-  height: 80%;
+  height: 75%;
   will-change: filter;
   transition: filter 300ms;
   line-height: 80px;
@@ -48,6 +56,7 @@
   position: fixed;
   text-align: center;
   border-bottom: 5px solid pink;
+  gap: 20px;
 }
 
 #footer {
