Improved some more styling
Co-authored-by: Joseph-McGarry <Joseph-McGarry@users.noreply.github.com>

--- a/vite-demo/src/components/QueryForm.css
+++ b/vite-demo/src/components/QueryForm.css
@@ -94,11 +94,14 @@
   color: black;
 }
 th {
-
   padding: 8px;
 }
 
 #barchart {
   padding-top: 10px;
   color: white;
+}
+
+#barchart canvas {
+  padding: 10px;
 }
