--- a/vite-demo/src/index.css
+++ b/vite-demo/src/index.css
@@ -16,6 +16,7 @@
 a {
   font-weight: 500;
   color: #646cff;
+
   text-decoration: inherit;
 }
 a:hover {
@@ -47,7 +48,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  /* border-color: #646cff; */
+  border-color: #f077bc;
+  color: #faefdf;
 }
 button:focus,
 button:focus-visible {
