--- a/vite-demo/src/index.css
+++ b/vite-demo/src/index.css
@@ -51,6 +51,7 @@ button:hover {
   /* border-color: #646cff; */
   border-color: #f077bc;
   color: #faefdf;
+  box-shadow: 0px 0px 7px 3px #f077bc;
 }
 button:focus,
 button:focus-visible {
