--- a/vite-demo/src/App.css
+++ b/vite-demo/src/App.css
@@ -58,10 +58,12 @@ body {
   border-bottom: 5px solid #f077bc;
   /* was 'pink' */
   gap: 20px;
+
 }
 
 #header,
 #footer {
+  display: flex;
   margin: 0;
   left: 0;
   background-color: rgb(55, 55, 55);
@@ -70,7 +72,6 @@ body {
   height: 80px;
   justify-content: center;
   align-content: center;
-  display: flex;
   box-shadow: 0px 0px 20px 1px #f077bc;
 }
 
@@ -90,4 +91,22 @@ body {
   /* color: blanchedalmond; */
   color: #faefdf;
   
+}
+
+#pages {
+  position: fixed;
+  right: 0;
+  top: 0;
+  margin-top: 30px;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: row; /* Stack buttons vertically */
+  align-items: flex-end; /* Align buttons to the right */
+}
+
+#pages > button {
+  margin-bottom: 10px; /* Add space between buttons */
+  margin-left: 5px;
+  margin-right: 5px;
+  /* Remove position, right, and top properties */
 }
