--- a/vite-demo/src/App.css
+++ b/vite-demo/src/App.css
@@ -8,7 +8,8 @@ body {
 
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  min-height: 100%;  
+  margin: 100px auto 0px;
   padding: 2rem;
   text-align: center;
 }
@@ -16,7 +17,7 @@ body {
 .logo {
   margin-top: auto;
   margin-bottom: auto;
-  height: 70%;
+  height: 60%;
   will-change: filter;
   transition: filter 300ms;
   line-height: 80px;
@@ -66,7 +67,7 @@ body {
   display: flex;
   margin: 0;
   left: 0;
-  background-color: rgb(55, 55, 55);
+  background-color: rgb(26, 26, 26);
   /* background-color: #faefdf; */
   width: 100%;
   height: 80px;
@@ -75,14 +76,42 @@ body {
   box-shadow: 0px 0px 20px 1px #f077bc;
 }
 
-#footer {
-  position: absolute;
-  border-top: 5px solid #f077bc;
-  
-  /* was 'pink' */
-  margin-top: auto;
-  margin-bottom: 0;
+
+#socials{
+  position: fixed;
+  left: 0;
+  top: 0;
+  /* top right bottom left */
+  margin: 28px 0 auto 15px;
+  display: flex;
+  flex-direction: row; /* set logos side-by-side */
+  gap: 15px;
+  line-height: 80px;
 }
+
+.sociallogo {
+  height: 32px;
+  width: 32px;
+  /* filter to make svg logos white */
+  filter: invert(100%) sepia(13%) saturate(7500%) hue-rotate(200deg) brightness(112%) contrast(110%);
+}
+
+#pages {
+  position: fixed;
+  right: 0;
+  top: 0;
+  margin-top: 30px;
+  margin-right: 15px;
+  display: flex;
+  flex-direction: row; /* set buttons side-by-side */
+  align-items: flex-end; /* align buttons to the right */
+  gap: 10px;
+}
+.buql:hover {
+  transform: scale(1.1);
+  /* filter: drop-shadow(0px 0px 20px white) */
+}
+
 
 #header h1,
 #footer h2 {
@@ -93,20 +122,11 @@ body {
   
 }
 
-#pages {
+#footer {
   position: fixed;
-  right: 0;
-  top: 0;
-  margin-top: 30px;
-  margin-right: 10px;
-  display: flex;
-  flex-direction: row; /* Stack buttons vertically */
-  align-items: flex-end; /* Align buttons to the right */
-}
-
-#pages > button {
-  margin-bottom: 10px; /* Add space between buttons */
-  margin-left: 5px;
-  margin-right: 5px;
-  /* Remove position, right, and top properties */
+  border-top: 5px solid #f077bc;
+  bottom: 0;
+  /* was 'pink' */
+  margin-top: auto;
+  margin-bottom: 0;
 }
