--- a/vite-demo/src/index.css
+++ b/vite-demo/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
+  background-image: linear-gradient(to bottom, black, rgb(97, 97, 97), black);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
