--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -100,6 +100,8 @@ body {
   height: 32px;
   width: 32px;
   /* filter to make svg logos white */
+}
+#twitter {
   filter: invert(100%) sepia(13%) saturate(7500%) hue-rotate(200deg)
     brightness(112%) contrast(110%);
 }
