--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -101,7 +101,7 @@ body {
   width: 32px;
   /* filter to make svg logos white */
 }
-#twitter {
+.whitefilter {
   filter: invert(100%) sepia(13%) saturate(7500%) hue-rotate(200deg)
     brightness(112%) contrast(110%);
 }
